# sys_agent

./: README.md
backend/: .dockerignore  .env  .env copy  .env.dev  .env.prod  Dockerfile  docker-compose.yml  main.py  pyproject.toml  qa.py  qa2.py  qa3.py  qa4.py
backend/app/: config.py  init.py  note.md
backend/app/models/: __init__.py  agent.py  agent_skill.py  base.py  dialog.py  knowledge.py  llm.py  mcp.py  tool.py  usage_stats.py  user.py  work_session.py
backend/app/prompts/: lingseek.py
backend/app/router/: agent.py  agent_skill.py  com.py  dialog.py  knowledge.py  llm.py  mcp.py  tool.py  usage_stats.py  user.py  work_session.py
backend/app/schema/: agent.py  lingseek.py
backend/app/service/: agent.py  agent_skill.py  baseService.py  dialog.py  knowledge.py  llm.py  marsAgent.py  tool.py  usage_stats.py  user.py  work_session.py
backend/app/service/mcp/: mcpClient.py
backend/app/service/vectordb/: document_loader.py  milvus.py  reranker.py  text_splitter.py
backend/app/utils/: database.py  default_data.py  general_agent.py  helper.py  image_manager.py  jwt.py  llm.py  logger.py  mcp.py  openai_tool_name.py  schemas.py  skill_agent.py
frontend/: .dockerignore  .env.development  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: agent.ts  dashboard.ts  dialog.ts  knowledge.ts  login.ts  mcp.ts  model.ts  skill.ts  tool.ts  workspace.ts
frontend/src/components/agent/: agent-editor.vue  agent.vue
frontend/src/components/conversation/: chatPage.vue  conversation.vue  defaultPage.vue  histortCard.vue
frontend/src/components/dashboard/: dashboard.vue
frontend/src/components/home/: index.vue
frontend/src/components/homepage/: mars-chat.vue
frontend/src/components/knowledge/: knowledge-file.vue  knowledge.vue
frontend/src/components/login/: login.vue  register.vue
frontend/src/components/mcp/: index.vue
frontend/src/components/model/: index.vue
frontend/src/router/: index.ts
frontend/src/types/: api.ts
frontend/src/utils/: request.ts
(+8 files in other folders)
