[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.6",
    "docx2txt>=0.9",
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "load-dotenv>=0.1.0",
    "logging>=0.4.9.6",
    "mcp>=1.27.0",
    "passlib[bcrypt]>=1.7.4",
    "pymilvus[milvus-lite]>=2.6.12",
    "pymysql>=1.1.2",
    "pypdf>=6.10.2",
    "pymupdf>=1.26.5",
    "python-jose>=3.5.0",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
    "rapidocr-onnxruntime>=1.4.4",
    "sentence-transformers>=5.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.42.0",
    "pytesseract>=0.3.13",
]
[tool.uv]
# 【关键修改】删除强制 Linux 环境的配置，让 uv 自动适配 Windows 系统
# 原行已删除：environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.uv.sources]
# 保留 PyTorch CPU 源配置，确保 Windows 下载 CPU 版本
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true  # 仅 PyTorch 系列包使用该源，避免污染其他依赖